--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...          
       - docker build -t aws-dashboard:latest .
-      - docker tag aws-dashboard:1.0 042524953207.dkr.ecr.eu-west-1.amazonaws.com/aws-dashboard:1.0
+      - docker tag aws-dashboard:latest 042524953207.dkr.ecr.eu-west-1.amazonaws.com/aws-dashboard:1.0
       - docker tag aws-dashboard:latest 042524953207.dkr.ecr.eu-west-1.amazonaws.com/aws-dashboard:latest
   post_build:
     commands:
