--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,10 +9,10 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - docker build -t aws-dashboard .
-      - docker tag aws-dashboard 042524953207.dkr.ecr.eu-west-1.amazonaws.com/aws-dashboard:1.0
+      - docker build -t aws-dashboard:latest -t aws-dashboard:1.0 .
+#      - docker tag aws-dashboard 042524953207.dkr.ecr.eu-west-1.amazonaws.com/aws-dashboard:1.0
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 042524953207.dkr.ecr.eu-west-1.amazonaws.com/aws-dashboard:1.0
+      - docker push aws-dashboard
